TypeChecking/test_cases/bad/no-main-2.cl
class Mainiac {
  main( ) : Object { 5 } ; 
} ;

class Foozle {
  foozle ( ) : Object { 5 } ;
} ;
